Final revisions to build-a-blog

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,23 +2,13 @@
 <html>
     <head>
         <title>Build-a-Blog</title>
-        <p>
-            <a href='/blog'>Main Blog Page</a>
-        </p>
-        <p>
-            <a href='/newpost'>New Blog Post</a>
-        </p>
+
+        <a href='/blog'>Main Blog Page</a> | <a href='/newpost'>New Blog Post</a>
 
         <style>
             .error {
                 color: red;
                 }
-            .title {
-                padding: 5px;
-            }
-            .entry {
-                padding: 5px;
-            }
         </style>
     </head>
 
